Resolving issue #736
Sequence numbers not visible when editing templates using modern theme

--- a/include/themes/modern/main.css
+++ b/include/themes/modern/main.css
@@ -1267,6 +1267,10 @@ legend {
 	text-align: left;
 }
 
+.formData em {
+	color: #555555;
+}
+
 .formRadio {
 	line-height: 22px;
 }
